# personal_portfolio

./: README.md  chatbot.py  flask_app.py  pyproject.toml  requirements.txt  resume_parser.py
static/css/: style.css
static/js/: main.js
templates/: base.html  chat.html  contact.html  home.html  projects.html  resume.html  skills.html
